--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node": "^20.14.4",
     "@types/three": "^0.161.2",
     "axios": "^1.6.7",
+    "browser-image-compression": "^2.0.2",
     "i18next": "^23.4.1",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
